continue update main layout